--- a/frontend/pages/quanli-sanpham.html
+++ b/frontend/pages/quanli-sanpham.html
@@ -12,6 +12,8 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../assets/font/themify-icons/themify-icons.css" />
 </head>
+<script src="../controller/protectedRoutes.js"></script>
+
 
 <body>
   <header class="header">
@@ -20,6 +22,8 @@
     </div>
     <div class="admin">
       <span>&#128100; ADMIN</span>
+      <span>&#128100; <a href="trangchu.html">VỀ TRANG CHỦ</a></span>
+      <span id="logout-btn">&#128100; ĐĂNG XUẤT</span>
     </div>
   </header>
 
@@ -28,7 +32,7 @@
       <ul>
         <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
         <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
-        <li><a href="quanli-khachhang.html">👥 Quản lý khách hàng</a></li>
+        <li><a href="quanli-lienhe.html">👥 Quản lý phản hồi</a></li>
         <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
         <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
       </ul>
