--- a/frontend/pages/quanli-taikhoan.html
+++ b/frontend/pages/quanli-taikhoan.html
@@ -11,6 +11,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../assets/font/themify-icons/themify-icons.css" />
 </head>
+<script src="../controller/protectedRoutes.js"></script>
 
 <body>
   <header class="header">
